# argo3-lootbot

./: README.md
src/: CMakeLists.txt
src/cmake/: ARGoSBuildOptions.cmake  ARGoSPackaging.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/loot-bot/: CMakeLists.txt
src/plugins/robots/loot-bot/control_interface/: ci_lootbot_base_ground_sensor.cpp  ci_lootbot_base_ground_sensor.h  ci_lootbot_distance_scanner_actuator.cpp  ci_lootbot_distance_scanner_actuator.h  ci_lootbot_distance_scanner_sensor.cpp  ci_lootbot_distance_scanner_sensor.h  ci_lootbot_encoder_sensor.cpp  ci_lootbot_encoder_sensor.h  ci_lootbot_gripper_actuator.cpp  ci_lootbot_gripper_actuator.h  ci_lootbot_light_sensor.cpp  ci_lootbot_light_sensor.h  ci_lootbot_motor_ground_sensor.cpp  ci_lootbot_motor_ground_sensor.h  ci_lootbot_proximity_sensor.cpp  ci_lootbot_proximity_sensor.h  ci_lootbot_turret_actuator.cpp  ci_lootbot_turret_actuator.h  ci_lootbot_turret_encoder_sensor.cpp  ci_lootbot_turret_encoder_sensor.h
src/plugins/robots/loot-bot/simulator/: dynamics2d_lootbot_model.cpp  dynamics2d_lootbot_model.h  lootbot_base_ground_rotzonly_sensor.cpp  lootbot_base_ground_rotzonly_sensor.h  lootbot_distance_scanner_default_actuator.cpp  lootbot_distance_scanner_default_actuator.h  lootbot_distance_scanner_equipped_entity.cpp  lootbot_distance_scanner_equipped_entity.h  lootbot_distance_scanner_rotzonly_sensor.cpp  lootbot_distance_scanner_rotzonly_sensor.h  lootbot_entity.cpp  lootbot_entity.h  lootbot_gripper_default_actuator.cpp  lootbot_gripper_default_actuator.h  lootbot_light_rotzonly_sensor.cpp  lootbot_light_rotzonly_sensor.h  lootbot_motor_ground_rotzonly_sensor.cpp  lootbot_motor_ground_rotzonly_sensor.h  lootbot_proximity_default_sensor.cpp  lootbot_proximity_default_sensor.h  lootbot_turret_default_actuator.cpp  lootbot_turret_default_actuator.h  lootbot_turret_encoder_default_sensor.cpp  lootbot_turret_encoder_default_sensor.h  lootbot_turret_entity.cpp  lootbot_turret_entity.h  physx_lootbot_model.cpp  physx_lootbot_model.h  pointmass3d_lootbot_model.cpp  pointmass3d_lootbot_model.h  qtopengl_lootbot.cpp  qtopengl_lootbot.h
